tests/ui/cast_targets/sqlite/fail/marker_target_mismatch.stderr
error[E0277]: the trait bound `drizzle::sqlite::types::Real: CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not satisfied
  --> tests/ui/cast_targets/sqlite/fail/marker_target_mismatch.rs:13:63
   |
13 |     let _ = cast::<_, _, drizzle::core::types::Int>(user.age, drizzle::sqlite::types::Real);
   |             ---------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Real`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'a, T, D>` is implemented for `&'a str`
  --> core/src/expr/util.rs
   |
   | impl<'a, T: DataType, D> CastTarget<'a, T, D> for &'a str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
